[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/texture/PNG/Green/texture_13.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui_army_generator.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/Spawner_player.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 0.1, 0.1, 0.1 )
uv1_offset = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 10, 0.01, 10 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 9, 1, 11 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 11, 10, 2.90873 )

[node name="Spawner" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="army_generator" parent="." instance=ExtResource( 2 )]
margin_top = -1.0
margin_bottom = 326.0

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.2072, 0 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.884291, 0 )
shape = SubResource( 3 )

[node name="Box_container" type="Spatial" parent="."]

[node name="StaticBody2" type="StaticBody" parent="Box_container"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Box_container/StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.361, -12 )
shape = SubResource( 4 )

[node name="StaticBody3" type="StaticBody" parent="Box_container"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Box_container/StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0598e-07, 10.361, -13 )
shape = SubResource( 4 )

[node name="StaticBody4" type="StaticBody" parent="Box_container"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Box_container/StaticBody4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.11959e-07, 10.361, -13 )
shape = SubResource( 4 )

[node name="StaticBody5" type="StaticBody" parent="Box_container"]
transform = Transform( 1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 0, 5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Box_container/StaticBody5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04207e-06, 10.361, -13.9466 )
shape = SubResource( 4 )

[node name="Timer_unit_1" type="Timer" parent="."]
one_shot = true

[node name="Timer_unit_2" type="Timer" parent="."]

[node name="Timer_unit_3" type="Timer" parent="."]

[connection signal="timeout" from="Timer_unit_1" to="." method="_on_Timer_unit_1_timeout"]
[connection signal="timeout" from="Timer_unit_2" to="." method="_on_Timer_unit_2_timeout"]
[connection signal="timeout" from="Timer_unit_3" to="." method="_on_Timer_unit_3_timeout"]
